<resources>
    <string name="app_name">My Shopping App</string>
    <string name="text1">Here is\nyour first\nstep with\nus !</string>
    <string name="text2">Please register with your information</string>
    <string name="Register">Register</string>
    <string name="SignUp">Sign Up</string>
    <string name="text3">Already have an account?</string>
    <string name="Name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
</resources>