<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color1"
    tools:context=".SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lLayout1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image1"
            android:contentDescription="@string/SignUp"
            android:src="@drawable/shopping_cart_icon"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/cardView1"
        android:layout_below="@+id/lLayout1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="20dp"
            android:contentDescription="@string/SignUp"
            android:src="@drawable/and_img14" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/cardView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignUp"
                android:textColor="@color/color2"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputName"
                app:boxBackgroundColor="@color/white"
                style="@style/Theme.SignUp"
                android:layout_marginTop="20dp"
                android:paddingLeft="-17dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextName1"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:hint="@string/Name"
                    android:autofillHints="name"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Theme.SignUp"
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="-17dp">

                <EditText
                    android:id="@+id/editTextEmail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:maxLines="1"
                    android:hint="@string/email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:id="@+id/textInputPass"
                style="@style/Theme.SignUp"
                android:layout_marginTop="20dp"
                android:paddingLeft="-17dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextPass1"
                    android:maxLines="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:id="@+id/textInputConf"
                style="@style/Theme.SignUp"
                android:layout_marginTop="20dp"
                android:paddingLeft="-17dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextConfPass1"
                    android:maxLines="1"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/Register"
                app:cornerRadius="10dp" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginTxt"
                android:text="@string/text3"
                android:textColor="@color/color2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>